changed author place to fall under repository object

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
-	},
-	"author": "Jane Doe"
+		"url": "https://idontknow/todo.git",
+		"author": "Jane Doe"
+	}
+	
 }
