--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git",
-		"author": "Jane Doe"
+		"author": "Romane Green"
 	}
 	
 }
